[package]
name = "blockrs"
version = "0.4.0"
edition = "2021"
description = "TUI for tailing chain data"
authors = ["sergerad <serge.radinovich@immutable.com>"]
repository = "https://github.com/sergerad/blockrs"
license-file = "LICENSE"
build = "build.rs"
readme = "README.md"
keywords = ["tui", "ethereum"]
categories = ["command-line-utilities"]
rust-version = "1.85"
include = ["**/*.rs", "Cargo.toml", ".config/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
duration-str = "0.16"
chrono = "0.4"
clap = { version = "4.5.20", features = [
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles",
] }
color-eyre = "0.6.3"
config = "0.14.0"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.31"
human-panic = "2.0.2"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.161"
pretty_assertions = "1.4.1"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
alloy = { version = "0.12" }
url = "2.5"
thiserror = "2.0"
async-trait = "0.1"
miden-client = { version = "0.8", features = ["concurrent", "sqlite", "tonic"]}

[build-dependencies]
anyhow = "1.0.90"
vergen-gix = { version = "1.0.2", features = ["build", "cargo"] }
